--- a/main.css
+++ b/main.css
@@ -1,51 +1,49 @@
-
-body {
-    display: flex;
-    flex-direction: column;
-}
-
 form {
+    margin-top: 15vh;
     
-    margin: 20vh 50vh 0vh 90vh;
 }
 
-label {
-    display: block;
+label{
+    margin: 50vh 50vh 0vh 50vh;
 }
 
-input {
-    border-radius: 5px;
-    size: 100rem;
-}
-button {
-    background-color: rgba(0, 140, 255, 0.829);
-    color: white;
-    border-radius: 5px;
-    border: white;
-    padding: 7px;
-    display: inline-block;
-    margin: 1vh 50vh 1vh 90vh;
+p {
+    margin: 1vh 50vh 0vh 50vh;
 }
 
-.one, .two  {
-    background-color: rgba(0, 140, 255, 0.829);
-    color: white;
-    border-radius: 5px;
-    border: white;
-    padding: 7px;
-    margin: 5px;
+.insertWords:focus, .searchWords:focus {
+    outline: none;
+    border:2px solid rgb(69, 116, 219);
+    box-shadow: 0 0 10px #719ECE;
+  }
+
+.selectButton {
+    background-color: rgba(45, 111, 235, 0.945);
+    border-radius: 15px;
+    margin: 1vh 1vh 3vh 50vh;
 }
 
-.won {
-    background-color: green;
-    display: inline-block;
-    padding: 14vh;
-    margin: 1vh 50vh 1vh 90vh;
+.showCollection {
+    background-color: rgba(45, 111, 235, 0.945);
+    border-radius: 15px;
 }
 
-.lose {
-    background-color: red;
-    display: inline-block;
-    padding: 14vh;
-    margin: 1vh 50vh 1vh 90vh;
+.insertWords {
+    border-radius: 15px;
+    margin: 1vh 50vh 0vh 50vh;
+    padding: 5px;
+}
+
+.searchWords {
+    border-radius: 15px;
+    margin: 1vh 1vh 0vh 50vh;
+    padding: 5px;
+}
+
+.search{
+    padding-top: 3px;
+    padding-bottom: 3px;
+    border-radius: 42%;
+    background-color: rgba(54, 148, 236, 0.945);
+    
 }
