--- a/main.css
+++ b/main.css
@@ -1,5 +1,6 @@
 form {
     margin-top: 15vh;
+    margin-left: 35vh;
     
 }
 
@@ -8,7 +9,7 @@ label{
 }
 
 p {
-    margin: 1vh 50vh 0vh 50vh;
+    margin: 1vh 50vh 0vh 80vh;
 }
 
 .insertWords:focus, .searchWords:focus {
@@ -45,5 +46,14 @@ p {
     padding-bottom: 3px;
     border-radius: 42%;
     background-color: rgba(54, 148, 236, 0.945);
+    margin-left: 50vh;
+    margin-top: 1vh;
     
+}
+
+.clearButton {
+    background-color: rgba(45, 111, 235, 0.945);
+    border-radius: 15px;
+    margin: 1vh 1vh 3vh 1vh;
+    padding: 0.30rem;
 }
